updated with register

--- a/answer8.yml
+++ b/answer8.yml
@@ -13,3 +13,9 @@
         content: Production
         dest: /tmp/issue
       when: "'prod' in group_names"
+    - name: show production system content
+      shell: cat /tmp/issue
+      register: issue_content
+    - name: print variable content
+      debug:
+        var: "issue_content"
