--- a/users_list2.yml
+++ b/users_list2.yml
@@ -1,11 +1,11 @@
 users:
   - username: dill
     job: developer
-  - username: do
+  - username: doh
     job: manager
-  - username: asshole
+  - username: ass
     job: test
-  - username: tommy
+  - username: hole
     job: developer
   - username: richie
     job: manager
