--- a/answer16.yml
+++ b/answer16.yml
@@ -3,7 +3,7 @@
   hosts: all
   tasks: 
     - include_role:
-        name: "haproxy-role"
+        name: haproxy-role
       when: "'proxy' in group_names"
     - include_role:
         name: php_role
